--- a/pom.xml
+++ b/pom.xml
@@ -244,7 +244,18 @@
       <artifactId>jedis</artifactId>
       <version>2.9.0</version>
     </dependency>
+
+    <!-- 二期新增的 -->
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.18</version>
+    </dependency>
+
   </dependencies>
+
+
 
 
   <build>
